@@ -1,7 +1,7 @@
 //
 // Format.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/Format.h#1 $
+// $Id: //poco/1.4/Foundation/include/Poco/Format.h#2 $
 //
 // Library: Foundation
 // Package: Core
@@ -109,8 +109,11 @@ std::string Foundation_API format(const std::string& fmt, const Any& value);
 	/// Precision is a nonnegative decimal integer, preceded by a period (.), which specifies the number of characters 
 	/// to be printed, the number of decimal places, or the number of significant digits.
 	///
-	/// Throws a BadCastException if an argument does not correspond to the type of its format specification.
 	/// Throws an InvalidArgumentException if an argument index is out of range.
+	///
+	/// Starting with release 1.4.3, an argument that does not match the format
+	/// specifier no longer results in a BadCastException. The string [ERRFMT] is 
+	/// written to the result string instead.
 	/// 
 	/// If there are more format specifiers than values, the format specifiers without a corresponding value
 	/// are copied verbatim to output.
