@@ -73,6 +73,9 @@ Release 1.4.3 (2012-01-xx)
 - Added additional constructor to Poco::ScopedLock and Poco::ScopedLockWithUnlock 
   accepting a timeout as second argument. 
 - Added Poco::Logger::parseLevel()
+- Poco::format(): an argument that does not match the format
+  specifier no longer results in a BadCastException. The string [ERRFMT] is 
+  written to the result string instead.
 
 
 Release 1.4.2p1 (2011-09-24)
@@ -1668,4 +1671,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#54 $
+$Id: //poco/1.4/dist/CHANGELOG#55 $
